[package]
name = "hsdoor"
version = "0.1.0"
edition = "2018"

[dependencies]
didkit = "0.2.1"
anyhow = "1"
evmap = "10.0.2"
rusqlite = "0.25.3"
serde = "*"
uuid = {version = "*", features = ["serde", "v4"]}

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["sqlite_pool"]

[dependencies.redis]
version = "*"
